# silo

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  flake.nix
app/bentoctl/: Cargo.toml
app/bentoctl/src/: constants.rs  lib.rs  profile.rs  ssh.rs
app/bentoctl/src/commands/: create.rs  edit.rs  exec.rs  images.rs  inspect.rs  list.rs  logs.rs  mod.rs  network.rs  profile.rs  restart.rs  rm.rs  rootfs_image.rs  run.rs  shell.rs  shell_proxy.rs  start.rs  status.rs  stop.rs
app/cli/: Cargo.toml
app/cli/lib/: app.rs  config.rs  constants.rs  context.rs  guest.rs  help.rs  lib.rs  network_policy.rs  profile.rs  terminal.rs  ui.rs  view.rs
app/cli/lib/commands/: create.rs  default.rs  exec.rs  mod.rs  network.rs  profile.rs  restart.rs  rm.rs  rootfs_image.rs  run.rs  secret.rs  set.rs  shell.rs  show.rs  start.rs  start_options.rs
app/cli/src/: config.rs  constants.rs  main.rs  profile.rs  progress.rs  ssh.rs  terminal.rs
app/cli/src/commands/: cleanup.rs  create.rs  default_machine.rs  edit.rs  exec.rs  list.rs  logs.rs  machine_view.rs  mod.rs  network.rs  output.rs  profile.rs  restart.rs  rm.rs  rootfs_image.rs  run.rs  secret.rs  set.rs  shell.rs  shell_proxy.rs  show.rs  start.rs  start_options.rs  stop.rs
common/ext4/: Cargo.toml  FORK.md  LICENSE-APACHE  LICENSE-MIT  README.md
common/ext4/src/: checksum.rs  constants.rs  dir.rs  error.rs  extent.rs  file_tree.rs  formatter.rs  journal.rs  layout.rs  lib.rs  resizer.rs  types.rs  unpack.rs  xattr.rs
common/ext4/tests/: bug_repro.rs  e2fsprogs.rs  format_options.rs  low_level.rs  oci_image.rs  roundtrip.rs
common/policy/: Cargo.toml  build.rs
common/policy/src/: builder.rs  canonical.rs  condition.rs  ffi.rs  lib.rs  model.rs  parse.rs  plugin.rs  registry.rs
guest/agent/: Cargo.toml  README.md
guest/agent/src/: filesystem.rs  forward.rs  handoff.rs  main.rs  metrics.rs  pid1.rs  port.rs  rpc.rs  server.rs
guest/agent/src/host/: info.rs
guest/agent/src/provision/: ca.rs  hostname.rs  locale.rs  mod.rs  mounts.rs  network.rs  networkd.rs  resize.rs  rosetta.rs  service_manager.rs  ssh.rs  timezone.rs  user.rs  userdata.rs
guest/agent/src/ssh/: agent.rs  mod.rs  openssh.rs
guest/bento-agent/: Cargo.toml  README.md
guest/bento-agent/src/: config.rs  dns.rs  main.rs  port.rs  rpc.rs
guest/bento-agent/src/host/: network.rs
guest/bento-agent/src/provision/: ca.rs  growpart.rs  hostname.rs  locale.rs  mod.rs  mounts.rs  networkd.rs  resize.rs  rosetta.rs  ssh.rs  state.rs  timezone.rs  user.rs  userdata.rs
runtime/bento-libvm/: Cargo.toml  README.md
runtime/bento-libvm/migrations/: 0001_initial.sql
runtime/bento-libvm/src/: certificate_authority.rs  engine.rs  error.rs  global_config.rs  instance.rs  instance_file.rs  launch.rs  layout.rs  lib.rs  models.rs  network.rs  root_disk.rs  ssh_keys.rs  state.rs
runtime/bento-libvm/src/machine/: config.rs  create.rs  handle.rs  inspect.rs  lifecycle.rs  mod.rs  reference.rs  streams.rs  update.rs
runtime/bento-libvm/src/models/: machine.rs  mod.rs  network.rs
runtime/bento-libvm/src/network/: api.rs  config.rs  core.rs  mod.rs  netd_driver.rs  vznat_driver.rs
runtime/bento-libvm/src/paths/: defaults.rs  local.rs  machine.rs  mod.rs
runtime/bento-libvm/src/runtime/: config.rs  core.rs  local.rs  mod.rs  transitions.rs
runtime/bento-libvm/src/state/: migrations.rs  mod.rs  models.rs  store.rs
runtime/bento-libvm/src/store/: config.rs  core.rs  db.rs  machine.rs  machine_store.rs  mod.rs  network.rs  network_store.rs  store.rs  traits.rs  wrappers.rs
runtime/bento-libvm/src/vmmon/: client.rs  exit_status.rs  launch.rs  mod.rs
runtime/libvm/: Cargo.toml  README.md
runtime/libvm/migrations/: 0002_images.sql  0003_remove_vznat.sql
runtime/libvm/src/: constants.rs  error.rs  guest_agent.rs  initramfs_overlay.rs  lib.rs  lock_manager.rs  utils.rs
runtime/libvm/src/host/: certificates.rs  env.rs  mod.rs  ssh.rs  user.rs
runtime/libvm/src/image/: mod.rs
runtime/libvm/src/machine/: builder.rs  config.rs  guest.rs  handle.rs  inspect.rs  lifecycle.rs  lifecycle_options.rs  memory.rs  mod.rs  mounts.rs  name_generator.rs  reference.rs  root_disk.rs  session.rs  start.rs  streams.rs  update.rs
runtime/libvm/src/network/: api.rs  builder.rs  core.rs  mod.rs  netd_driver.rs  policy.rs  vznat_driver.rs
runtime/libvm/src/paths/: defaults.rs  local.rs  machine.rs  mod.rs  network.rs
runtime/libvm/src/runtime/: boot_assets.rs  builder.rs  config.rs  core.rs  mod.rs
runtime/libvm/src/store/: config_store.rs  image_store.rs  machine_store.rs  mock_store.rs  mod.rs  network_store.rs  store.rs  traits.rs
runtime/libvm/src/vmmon/: client.rs  launch.rs  launch_spec.rs  mod.rs
runtime/ocidisk/: Cargo.toml
runtime/ocidisk/src/: error.rs  ext4_writer.rs  layer.rs  lib.rs  oci_archive.rs  platform.rs  registry.rs  source.rs  store.rs
runtime/plugins/: Cargo.toml
runtime/plugins/src/: lib.rs
runtime/vmmon/: Cargo.toml  vmmon.entitlements
runtime/vmmon/src/: context.rs  endpoints.rs  exit_command.rs  exit_status.rs  ext.rs  filesystem.rs  guest.rs  machine.rs  main.rs  services.rs  shutdown.rs  startup.rs  state.rs
runtime/vmmon/src/endpoints/: control.rs  plugin.rs
runtime/vmmon/src/lock/: pid.rs
runtime/vmmon/src/net/: listener.rs  (+3 more)
sdk/node/: Cargo.toml  README.md  package-lock.json  package.json
sdk/node/native/: lib.rs
sdk/node/src/: convert.ts  errors.ts  exec.ts  images.ts  index.ts  machine.ts  network.ts  runtime.ts  types.ts  validation.ts
specs/bento-protocol/: Cargo.toml
specs/bento-protocol/src/: lib.rs
specs/protocol/: Cargo.toml  build.rs
specs/protocol/proto/: common.proto  errors.proto  filesystem.proto  guest.proto  vm_monitor.proto
specs/protocol/src/: lib.rs  negotiate.rs  services.rs
virt/bento-krun/: Cargo.toml
virt/bento-krun/src/: builder.rs  config.rs  lib.rs  vm.rs  watchdog.rs
virt/virt/: Cargo.toml  README.md
virt/virt/src/: lib.rs  machine.rs  platform.rs  serial.rs  types.rs
virt/vz/: Cargo.toml  README.md
virt/vz/src/: error.rs  lib.rs  utils.rs  vm.rs
(+340 files in other folders)
