[workspace]
members = [
    "app/bento-cli",
    "common/bento-policy",
    "common/bento-ext4",
    "common/bento-initramfs",
    "common/bento-utils",
    "guest/bento-agent",
    "guest/bento-init",
    "runtime/bento-ocidisk",
    "runtime/bento-libvm",
    "runtime/bento-plugins",
    "runtime/bento-vmmon",
    "virt/bento-fc",
    "virt/bento-krun",
    "virt/bento-krun-sys",
    "virt/bento-virt",
    "virt/bento-vz",
    "specs/bento-agent-spec",
    "specs/bento-protocol",
    "specs/bento-vm-spec",
]
default-members = ["app/bento-cli", "runtime/bento-vmmon"]
resolver = "2"

[profile.dev.package.sha2]
opt-level = 3
