[workspace]
members = [
    "app/cli",
    "common/policy",
    "common/ext4",
    "xtask",
    "common/utils",
    "guest/agent",
    "guest/init",
    "runtime/ocidisk",
    "runtime/libvm",
    "runtime/plugins",
    "runtime/vmmon",
    "virt/krun",
    "virt/krun-sys",
    "virt/virt",
    "virt/vz",
    "specs/agent-spec",
    "specs/protocol",
    "specs/vm-spec",
]
default-members = ["app/cli", "runtime/vmmon"]
resolver = "2"

[profile.dev.package.sha2]
opt-level = 3
