[workspace]
members = [
    "app/cli",
    "common/policy",
    "common/ext4",
    "xtask",
    "common/utils",
    "guest/agent",
    "guest/init",
    "runtime/ocidisk",
    "runtime/libvm",
    "runtime/plugins",
    "runtime/vmmon",
    "sdk/node",
    "virt/krun",
    "virt/virt",
    "virt/vz",
    "specs/agent-spec",
    "specs/protocol",
    "specs/vm-spec",
]
default-members = ["app/cli", "runtime/vmmon"]
resolver = "2"

[workspace.dependencies]
libkrun = { package = "libkrun", git = "https://github.com/vandycknick/libkrun.git", rev = "1b69e60ed03f58fe13bcd7b6f684aa71a404b0f9", default-features = false, features = ["blk", "net"] }

[profile.dev.package.sha2]
opt-level = 3
