[package]
name = "cli"
version = "0.1.0"
edition = "2021"
default-run = "silo"

[lib]
name = "cli"
path = "lib/lib.rs"

[[bin]]
name = "silo"
path = "bin/main.rs"

[dependencies]
agent-spec = { path = "../../specs/agent-spec" }
silo_policy = { package = "policy", path = "../../common/policy" }
libvm = { path = "../../runtime/libvm" }
vm-spec = { path = "../../specs/vm-spec" }
utils = { path = "../../common/utils" }
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
console = "0.16.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml_ng = "0.10.0"
libc = "0.2.186"
chrono = "0.4.45"
eyre = "0.6.12"
indicatif = "0.18.6"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "form", "rustls"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-util", "time", "io-std", "sync"] }

[dev-dependencies]
tempfile = "3.27.0"
