[package]
name = "policy"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "bento_policy"
crate-type = ["rlib", "staticlib"]

[features]
default = []
ffi = ["dep:serde_json"]
regenerate-ffi-header = ["dep:cbindgen"]

[dependencies]
cel = "0.13"
hcl = { package = "hcl-rs", version = "0.19.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
sha2 = "0.10.9"
thiserror = "2.0"

[build-dependencies]
cbindgen = { version = "0.29.4", optional = true }
