[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "silo-agent"
path = "src/main.rs"

[dependencies]
agent-spec = { path = "../../specs/agent-spec" }
protocol = { path = "../../specs/protocol" }
eyre = "0.6.12"
futures = "0.3.32"
bytes = "1.11.1"
clap = { version = "4.6.1", default-features = false, features = ["derive", "std"] }
nix = { version = "0.31.3", features = ["feature", "fs", "hostname", "mount", "net", "process", "signal", "term", "user"] }
rustix = { version = "1.1.4", features = ["fs", "mount", "process", "system"] }
russh = "0.62.2"
rtnetlink = "0.21.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "io-util", "net", "process", "time", "sync"] }
tokio-vsock = "0.7.2"
tonic = { version = "0.14.6", features = ["transport"] }
tonic-health = "0.14.6"
tonic-reflection = "0.14.6"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
prost-types = "0.14.4"
tokio-stream = "0.1.18"
uuid = { version = "1.23.4", features = ["v4"] }

[dev-dependencies]
tempfile = "3.27.0"
