[package]
name = "bento-libvm"
version = "0.1.0"
edition = "2021"

[dependencies]
bento-protocol = { path = "../../wire/bento-protocol" }
bento-core = { path = "../../common/bento-core" }
bento-utils = { path = "../../common/bento-utils" }
chrono = "0.4.44"
eyre = "0.6.12"
fatfs = "0.3.6"
flate2 = "1.1.9"
getrandom = "0.4.2"
hyper-util = "0.1.20"
libc = "0.2.186"
oci-client = "0.16.1"
oci-spec = "0.9.0"
rcgen = "0.14.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
nix = { version = "0.31.3", features = ["process", "signal", "fs"] }
serde_yaml_ng = "0.10.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate", "macros", "chrono", "uuid", "json"] }
ssh-key = { version = "0.7.0-rc.10", default-features = false, features = ["ed25519", "std"] }
tar = "0.4.45"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["time", "fs", "rt", "net", "io-util", "sync", "macros"] }
tonic = { version = "0.14.6", features = ["transport"] }
tower = "0.5.3"
zstd = "0.13.3"

[dev-dependencies]
tempfile = "3.27.0"
