[package]
name = "bento-libvm"
version = "0.1.0"
edition = "2021"

[dependencies]
bento-agent-spec = { path = "../../specs/bento-agent-spec" }
bento-protocol = { path = "../../specs/bento-protocol" }
bento-vm-spec = { path = "../../specs/bento-vm-spec" }
bento-utils = { path = "../../common/bento-utils" }
eyre = "0.6.12"
getrandom = "0.4.2"
hyper-util = "0.1.20"
libc = "0.2.186"
rcgen = "0.14.8"
rustix = { version = "1.1.4", features = ["event", "process"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
nix = { version = "0.31.3", features = ["process", "signal", "fs"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate", "macros", "chrono", "uuid", "json"] }
ssh-key = { version = "0.7.0-rc.10", default-features = false, features = ["ed25519", "std"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["time", "fs", "rt", "net", "io-util", "sync", "macros"] }
tonic = { version = "0.14.6", features = ["transport"] }
tower = "0.5.3"
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.27.0"
