[package]
name = "libvm"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-spec = { path = "../../specs/agent-spec" }
protocol = { path = "../../specs/protocol" }
vm-spec = { path = "../../specs/vm-spec" }
utils = { path = "../../common/utils" }
async-trait = "0.1.89"
eyre = "0.6.12"
getrandom = "0.4.2"
hyper-util = "0.1.20"
libc = "0.2.186"
rcgen = "0.14.8"
rustix = { version = "1.1.4", features = ["event", "process"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
nix = { version = "0.31.3", features = ["process", "signal", "fs"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate", "macros", "chrono", "uuid", "json"] }
ssh-key = { version = "0.7.0-rc.10", default-features = false, features = ["ed25519", "std"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["time", "fs", "rt", "net", "io-util", "sync", "macros"] }
tonic = { version = "0.14.6", features = ["transport"] }
tower = "0.5.3"
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[dev-dependencies]
mockall = "0.14.0"
tempfile = "3.27.0"
