[package]
name = "libvm"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-spec = { path = "../../specs/agent-spec" }
ext4 = { path = "../../common/ext4" }
silo_policy = { package = "policy", path = "../../common/policy" }
ocidisk = { path = "../ocidisk" }
protocol = { path = "../../specs/protocol" }
vm-spec = { path = "../../specs/vm-spec" }
utils = { path = "../../common/utils" }
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.11.1"
cpio = "0.4.1"
eyre = "0.6.12"
getrandom = "0.4.3"
hyper-util = "0.1.20"
libc = "0.2.186"
rcgen = "0.14.8"
rustix = { version = "1.1.4", features = ["event", "process"] }
russh = "0.62.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
nix = { version = "0.31.3", features = ["process", "signal", "fs"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "migrate", "macros", "chrono", "uuid", "json"] }
ssh-key = { version = "0.7.0-rc.11", default-features = false, features = ["ed25519", "std"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["time", "fs", "rt", "net", "io-util", "io-std", "sync", "macros", "signal"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["io", "rt"] }
tonic = { version = "0.14.6", features = ["transport"] }
tower = "0.5.3"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
prost-types = "0.14.4"

[dev-dependencies]
mockall = "0.15.0"
tempfile = "3.27.0"
