[package]
name = "ocidisk"
version = "0.1.0"
edition = "2021"

[dependencies]
ext4 = { path = "../../common/ext4" }
containerregistry-image = "0.1.2"
containerregistry-registry = "0.1.2"
flate2 = "1.1.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tar = "0.4.44"
thiserror = "2.0.18"
tracing = "0.1.44"
zstd = "0.13.3"

[dev-dependencies]
tempfile = "3.27.0"
