[package]
name = "ocidisk"
version = "0.1.0"
edition = "2021"

[dependencies]
ext4 = { path = "../../common/ext4" }
containerregistry-image = "0.1.2"
flate2 = "1.1.9"
futures-util = "0.3.32"
nix = { version = "0.31.3", features = ["fs"] }
oci-client = { version = "0.17.0", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tar = "0.4.46"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["fs", "io-util", "sync"] }
tracing = "0.1.44"
zstd = "0.13.3"

[dev-dependencies]
tempfile = "3.27.0"
