[package]
name = "plugins"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-spec = { path = "../../specs/agent-spec" }
bytes = "1.12.0"
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
libc = "0.2.186"
nix = { version = "0.31.3", features = ["socket", "uio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "io-util", "net", "sync"] }
tracing = "0.1.44"
