[package]
name = "vmmon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vmmon"
path = "src/main.rs"

[dependencies]
agent-spec = { path = "../../specs/agent-spec" }
virt = { path = "../../virt/virt" }
protocol = { path = "../../specs/protocol" }
vm-spec = { path = "../../specs/vm-spec" }
utils = { path = "../../common/utils" }
clap = { version = "4.6.1", features = ["derive"] }
eyre = "0.6.12"
futures = "0.3.32"
libc = "0.2.186"
nix = { version = "0.31.3", features = ["signal", "fs", "socket", "process", "uio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "net", "io-util", "time", "signal", "sync", "fs", "process"] }
tokio-util = "0.7.18"
tonic = { version = "0.14.6", features = ["transport"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
