[package]
name = "silo-node"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
path = "native/lib.rs"

[dependencies]
libvm = { path = "../../runtime/libvm" }
napi = { version = "3.10.3", features = ["async", "tokio_rt", "napi9"] }
napi-derive = "3.5.9"
serde_json = "1.0.150"
vm-spec = { path = "../../specs/vm-spec" }

[build-dependencies]
napi-build = "2.3.2"
