[package]
name = "bento-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
postcard = { version = "1.1.3", features = ["use-std"] }
prost = "0.14.3"
prost-types = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tarpc = { version = "0.37.0", features = ["serde-transport-bincode"] }
tokio = { version = "1.52.3", features = ["io-util", "net", "time"] }
tonic = { version = "0.14.6", features = ["transport"] }
tonic-prost = "0.14.6"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
prost-build = "0.14.3"
tonic-prost-build = "0.14.6"
