[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.11.1"
prost = "0.14.4"
prost-types = "0.14.4"
tonic = { version = "0.14.6", features = ["transport"] }
tonic-prost = "0.14.6"

[build-dependencies]
prost-build = "0.14.4"
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.6"
